Copied FCCSW/FWCore and renamed JugBase.
- Found out ROOT libraries need to be found in top cmakelists before
calling gaudi_project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 3.2.0)
 
+#---------------------------------------------------------------
+# to use ROOT targets, find_package ROOT must come before find_package Gaudi
+# (for now) # see issue Gaudi#103
+find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
+find_package(DD4hep COMPONENTS DDG4 DDRec REQUIRED)
+find_package(Geant4)
+
 find_package(GaudiProject)
 
 gaudi_project(Juggler v1r0
