--- a/JugBase/CMakeLists.txt
+++ b/JugBase/CMakeLists.txt
@@ -4,8 +4,14 @@
 gaudi_subdir(JugBase v1r0)
 
 find_package(EICD)
-find_package(podio)
+#set(PODIO $ENV{PODIO})
+#set(CMAKE_MODULE_PATH CMAKE_MODULE_PATH PODIO)
+#find_package(podio 0.11.01 REQUIRED)
+#include_directories(${podio_INCLUDE_DIR})
+
+#find_package(podio REQUIRED)
 find_package(ROOT COMPONENTS RIO Tree Core REQUIRED)
+find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 
 # this declaration will not be needed in the future
 gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
@@ -14,8 +20,8 @@ gaudi_install_python_modules()
 
 gaudi_add_library(JugBase
 		  src/*.cpp
-                  INCLUDE_DIRS EICD PODIO ROOT
-                  LINK_LIBRARIES GaudiAlgLib GaudiKernel
+                  INCLUDE_DIRS EICD PODIO ROOT $ENV{HOME}/stow/podio/include
+                  LINK_LIBRARIES GaudiAlgLib GaudiKernel ROOT DD4hep::DDG4IO
                   PUBLIC_HEADERS JugBase)
 target_link_libraries(JugBase 
   podio::podioRootIO
@@ -28,10 +34,10 @@ gaudi_add_module(JugBasePlugins
 #gaudi_add_test(ProduceForReadTest
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 #               FRAMEWORK tests/options/simple_producer.py)
-#gaudi_add_test(ReadTest
-#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-#               FRAMEWORK tests/options/simple_reader.py
-#               DEPENDS ProduceForReadTest)
+gaudi_add_test(ReadTest
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK tests/options/simple_reader.py
+               DEPENDS ProduceForReadTest)
 #gaudi_add_test(CheckReadCollectionSize
 #               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
