modified:   .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ compile:
   before_script:
     - pwd &&  ls -lrth
   script:
-    - cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
-    - cd $CI_BUILDS_DIR && ls -lrth && mkdir build && cd build && cmake .. && make
+    - export homedir=$(pwd) &&  pwd && cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
+    - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make
     #- git clone https://juggler-ci:_Pgt8fx-X2bnxgdu_8n_@eicweb.phy.anl.gov/EIC/juggler.git juggler
 
 run_example:
