--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,10 @@ compile:
   script:
     - export homedir=$(pwd) &&  pwd && cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
     - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make
-    #- git clone https://juggler-ci:_Pgt8fx-X2bnxgdu_8n_@eicweb.phy.anl.gov/EIC/juggler.git juggler
 
 run_example:
   stage: run
   tags:
     - sodium
   script:
-    - ./juggler/build/run gaudirun.py juggler/Examples/options/hello_world.py
+    - ./build/run gaudirun.py Examples/options/hello_world.py
