--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.2.0)
 
+set(CMAKE_PREFIX_PATH $ENV{HOME}/lib CMAKE_PREFIX_PATH)
+find_package(NPDet  REQUIRED)
 #---------------------------------------------------------------
 # to use ROOT targets, find_package ROOT must come before find_package Gaudi
 # (for now) # see issue Gaudi#103
@@ -11,7 +13,6 @@ find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 find_package(Geant4)
 
-find_package(NPDet COMPONENTS DD4podIO DDG4_PIDsdet )
 
 find_package(GaudiProject)
 
