Removed Incidents in geosvc
 - Removed incidnets
 - added test with geosvc

	modified:   CMakeLists.txt
	modified:   JugBase/IGeoSvc.h
	modified:   JugBase/PodioDataSvc.h
	modified:   src/PodioDataSvc.cpp
	modified:   src/components/GeoSvc.cpp
	modified:   src/components/GeoSvc.h
	new file:   tests/options/reader_with_geosvc.py
	modified:   ../JugReco/CMakeLists.txt

--- a/JugBase/CMakeLists.txt
+++ b/JugBase/CMakeLists.txt
@@ -38,8 +38,10 @@ gaudi_add_module(JugBasePlugins
 #               FRAMEWORK tests/options/simple_producer.py)
 gaudi_add_test(ReadTest
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/simple_reader.py
-               DEPENDS ProduceForReadTest)
+               FRAMEWORK tests/options/simple_reader.py)
+gaudi_add_test(ReadGeoTest
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK tests/options/reader_with_geosvc.py)
 #gaudi_add_test(CheckReadCollectionSize
 #               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
