--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -28,8 +28,9 @@ gaudi_install_python_modules()
 #  )
 
 gaudi_add_module(JugRecoPlugins
-                 src/components/*.cpp 
-                 LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd)
+  src/components/TrackerHitReconstruction.cpp 
+  src/components/TestACTSLogger.cpp 
+  LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec)
 
 #gaudi_add_test(ProduceForReadTest
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
