--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -29,8 +29,11 @@ gaudi_install_python_modules()
 
 gaudi_add_module(JugRecoPlugins
   src/components/TrackerHitReconstruction.cpp 
+  src/components/TrackerSourceLinker.cpp 
   src/components/TestACTSLogger.cpp 
-  LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec)
+  LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
+
+target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
 
 #gaudi_add_test(ProduceForReadTest
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
