--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -30,7 +30,9 @@ gaudi_install_python_modules()
 gaudi_add_module(JugRecoPlugins
   src/components/TrackerHitReconstruction.cpp 
   src/components/TrackerSourceLinker.cpp 
+  src/components/TrackFindingAlgorithm.cpp 
   src/components/TestACTSLogger.cpp 
+  src/components/TrackParamTruthInit.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
