--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,18 +12,18 @@ stages:
 compile:
   stage: build
   tags:
-    - sodium
+    - silicon
   before_script:
     - pwd &&  ls -lrth
   script:
     - export homedir=$(pwd) &&  pwd && cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
     - cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/eicd.git && mkdir eicd_build && cd eicd_build && cmake ../eicd/. && make -j20 install
-    - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make -j1
+    - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make -j10
 
 run_example:
   stage: run
   tags:
-    - sodium
+    - silicon
   script:
     - ./build/run gaudirun.py Examples/options/hello_world.py
 
@@ -31,6 +31,6 @@ run_example2:
   image: eicweb.phy.anl.gov:4567/eic/npdet/npdet:latest
   stage: run
   tags:
-    - sodium
+    - silicon
   script:
     - ./build/run gaudirun.py JugBase/tests/options/simple_reader.py
