add a clustering algorithm and an example script to test it

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -34,6 +34,7 @@ gaudi_add_module(JugRecoPlugins
   src/components/TestACTSLogger.cpp 
   src/components/TrackParamTruthInit.cpp 
   src/components/ParticlesFromTrackFit.cpp 
+  src/components/CalorimeterIslandCluster.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
