--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -35,6 +35,7 @@ gaudi_add_module(JugRecoPlugins
   src/components/TrackParamTruthInit.cpp 
   src/components/ParticlesFromTrackFit.cpp 
   src/components/CalorimeterIslandCluster.cpp 
+  src/components/CrystalEndcapsReco.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
