--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -36,6 +36,7 @@ gaudi_add_module(JugRecoPlugins
   src/components/ParticlesFromTrackFit.cpp 
   src/components/CalorimeterIslandCluster.cpp 
   src/components/CrystalEndcapsReco.cpp 
+  src/components/ClusterRecoCoG.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
