--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,17 +20,17 @@ compile:
     - cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/eicd.git && mkdir eicd_build && cd eicd_build && cmake ../eicd/. && make -j20 install
     - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make -j10
 
-run_example:
-  stage: run
-  tags:
-    - silicon
-  script:
-    - ./build/run gaudirun.py Examples/options/hello_world.py
-
-run_example2:
-  image: eicweb.phy.anl.gov:4567/eic/npdet/npdet:latest
-  stage: run
-  tags:
-    - silicon
-  script:
-    - ./build/run gaudirun.py JugBase/tests/options/simple_reader.py
+      #run_example:
+      #  stage: run
+      #  tags:
+      #    - silicon
+      #  script:
+      #    - ./build/run gaudirun.py Examples/options/hello_world.py
+      #
+      #run_example2:
+      #  image: eicweb.phy.anl.gov:4567/eic/npdet/npdet:latest
+      #  stage: run
+      #  tags:
+      #    - silicon
+      #  script:
+      #    - ./build/run gaudirun.py JugBase/tests/options/simple_reader.py
