Rich cluster and ring reconstruction
- add fuzzy k clustering algorithms
- rename the clustering algorithm

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -38,6 +38,8 @@ gaudi_add_module(JugRecoPlugins
   src/components/CrystalEndcapsReco.cpp 
   src/components/ClusterRecoCoG.cpp 
   src/components/PhotoMultiplierReco.cpp 
+  src/components/PhotoRingClusters.cpp 
+  src/components/FuzzyKClusters.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
