--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ default:
 
 stages:
   - build
+  - container
   - run
 
 compile:
@@ -34,3 +35,25 @@ compile:
       #    - silicon
       #  script:
       #    - ./build/run gaudirun.py JugBase/tests/options/simple_reader.py
+
+docker_image:
+  image: eicweb.phy.anl.gov:4567/containers/image_recipes/ubuntu_dind:latest
+  stage: container
+  tags:
+    - sodium
+  only:
+    - master
+    - ci_dev
+  script:
+    - cd containers/docker && make release-latest
+
+docker_tag:
+  image: eicweb.phy.anl.gov:4567/containers/image_recipes/ubuntu_dind:latest
+  stage: container
+  tags:
+    - sodium
+  only:
+    - tags
+  script:
+    - cd containers/docker && make release
+
