--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,20 +6,20 @@ default:
       - build/
 
 stages:
-  - build
+  #  - build
   - container
   - run
 
-compile:
-  stage: build
-  tags:
-    - silicon
-  before_script:
-    - pwd &&  ls -lrth
-  script:
-    - export homedir=$(pwd) &&  pwd && cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
-    - cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/eicd.git && mkdir eicd_build && cd eicd_build && cmake ../eicd/. && make -j20 install
-    - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make -j10
+    #compile:
+    #  stage: build
+    #  tags:
+    #    - silicon
+    #  before_script:
+    #    - pwd &&  ls -lrth
+    #  script:
+    #    - export homedir=$(pwd) &&  pwd && cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
+    #    - cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/eicd.git && mkdir eicd_build && cd eicd_build && cmake ../eicd/. && make -j20 install
+    #    - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make -j10
 
       #run_example:
       #  stage: run
