--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,7 @@ find_package(GaudiProject)
 gaudi_project(Juggler v1r0
               USE Gaudi v33r1)
 
-            install(FILES ${CMAKE_BINARY_DIR}/run 
-              DESTINATION bin/)
+install(FILES ${CMAKE_BINARY_DIR}/run 
+  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ  GROUP_EXECUTE WORLD_READ  WORLD_EXECUTE 
+  DESTINATION bin/
+  )
