--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -40,6 +40,7 @@ gaudi_add_module(JugRecoPlugins
   src/components/PhotoMultiplierReco.cpp 
   src/components/PhotoRingClusters.cpp 
   src/components/FuzzyKClusters.cpp 
+  src/components/EMCalReconstruction.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
