--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,29 @@ default:
       - build/
 
 stages:
-  #  - build
+  - build
   - docker_build
   - docker_push
   - run
 
+compile:
+  stage: build
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "master"'
+  tags:
+    - silicon
+  script:
+    - export homedir=$(pwd) &&  pwd && cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/NPDet.git && mkdir build && cd build && cmake ../NPDet/. && make -j20 install
+    - cd /tmp && git clone --depth=1 https://eicweb.phy.anl.gov/EIC/eicd.git && mkdir eicd_build && cd eicd_build && cmake ../eicd/. && make -j20 install
+    - cd $homedir && ls -lrth && mkdir build && cd build && cmake .. && make -j10
+
 docker_image:
   image: eicweb.phy.anl.gov:4567/containers/image_recipes/ubuntu_dind:latest
   stage: docker_build
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+      #  - if: '$CI_COMMIT_BRANCH == "master"'
   tags:
     - silicon
   script:
@@ -23,6 +38,12 @@ docker_image:
 docker_image_push:
   image: eicweb.phy.anl.gov:4567/containers/image_recipes/ubuntu_dind:latest
   stage: docker_push
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: '$CI_COMMIT_BRANCH != "master"'
+      when: never
+    - when: on_success
   tags:
     - silicon
   script:
