--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,10 +56,10 @@ docker_image_push:
 docker_tag:
   image: eicweb.phy.anl.gov:4567/containers/image_recipes/ubuntu_dind:latest
   stage: docker_build
+  rules:
+    - if: '$CI_COMMIT_TAG'
   tags:
     - silicon
-  only:
-    - tags
   script:
     - cd containers/docker && make release
 
