Adding tracker param init from cluster.
- All charges (-1,0,1) are added to the candidates
- The initial vector points to the EM cluster, set with momentum equal
to the energy where we assume a massless particle
- Added new seeding algorithm which uses Ecal clusters and Vertex
tracker hits.

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -34,6 +34,7 @@ gaudi_add_module(JugRecoPlugins
   src/components/TestACTSLogger.cpp 
   src/components/TrackParamTruthInit.cpp 
   src/components/TrackParamClusterInit.cpp 
+  src/components/TrackParamVertexClusterInit.cpp 
   src/components/SimpleClustering.cpp 
   src/components/ParticlesFromTrackFit.cpp 
   src/components/CalorimeterIslandCluster.cpp 
