WIP: PID algorithms
- adding Timing PID

	modified:   CMakeLists.txt
	modified:   src/components/TimingPID.cpp

	modified:   src/components/TimingPID.cpp

Added skeleton RingImagePID

- This should be used for RICH-based  PID

Added skeleton ElectronPID algo

Fixed typo
	modified:   ElectronPID.cpp
	modified:   RingImagePID.cpp
	modified:   TimingPID.cpp

	modified:   ElectronPID.cpp
	modified:   RingImagePID.cpp
	modified:   TimingPID.cpp

Fixed missing return value

	modified:   ElectronPID.cpp
	modified:   RingImagePID.cpp
	modified:   TimingPID.cpp

--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -46,6 +46,9 @@ gaudi_add_module(JugRecoPlugins
   src/components/PhotoRingClusters.cpp 
   src/components/FuzzyKClusters.cpp 
   src/components/EMCalReconstruction.cpp 
+  src/components/TimingPID.cpp 
+  src/components/RingImagePID.cpp 
+  src/components/ElectronPID.cpp 
   LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd DDRec Acts)
 
 target_compile_options(JugRecoPlugins PRIVATE -Wno-suggest-override)
