--- a/JugDigi/CMakeLists.txt
+++ b/JugDigi/CMakeLists.txt
@@ -1,7 +1,7 @@
 ################################################################################
 # Package: JugDigi
 ################################################################################
-gaudi_subdir(JugDigi v1r0)
+#gaudi_subdir(JugDigi v1r0)
 
 find_package(EICD REQUIRED)
 #set(PODIO $ENV{PODIO})
@@ -13,7 +13,7 @@ find_package(ROOT COMPONENTS RIO Tree Core REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
+#gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
 #gaudi_install_scripts()
 #gaudi_install_python_modules()
 
@@ -27,17 +27,24 @@ gaudi_depends_on_subdirs(GaudiAlg GaudiKernel)
 #  )
 
 gaudi_add_module(JugDigiPlugins
-                 src/components/*.cpp 
-                 LINK_LIBRARIES GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd)
+  SOURCES 
+  src/components/CrystalEndcapsDigi.cpp  src/components/ExampleCaloDigi.cpp  src/components/PhotoMultiplierDigi.cpp  src/components/UFSDTrackerDigi.cpp
+  src/components/EMCalorimeterDigi.cpp   src/components/HadronicCalDigi.cpp  src/components/SOIPIXTrackerDigi.cpp
+)
+target_link_libraries(JugDigiPlugins
+  PUBLIC GaudiAlgLib GaudiKernel JugBase ROOT NPDet::DD4podIO EICD::eicd)
+target_include_directories(JugDigiPlugins
+  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  PUBLIC $<INSTALL_INTERFACE:include> )
 target_compile_options(JugDigiPlugins PRIVATE -Wno-suggest-override)
 
 #gaudi_add_test(ProduceForReadTest
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 #               FRAMEWORK tests/options/simple_producer.py)
-gaudi_add_test(ExCaloDigi
-               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/example_calodigi.py
-               )
+#gaudi_add_test(ExCaloDigi
+#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#               FRAMEWORK tests/options/example_calodigi.py
+#               )
 #gaudi_add_test(CheckReadCollectionSize
 #               ENVIRONMENT PYTHONPATH+=${PODIO_PYTHON_DIR}
 #               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
