- Fixed source links concept change - Fixed DataHandle name change 	modified:   CMakeLists.txt 	modified:   JugBase/JugBase/DataHandle.h 	modified:   JugReco/JugReco/SourceLinks.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ find_package(Geant4)
 
 find_package(Gaudi)
 
+add_compile_options( -Wfatal-errors )
+
 add_subdirectory(JugBase)
 add_subdirectory(JugDigi)
 add_subdirectory(JugReco)
