modified:   .containers/docker/Dockerfile

--- a/.containers/docker/Dockerfile
+++ b/.containers/docker/Dockerfile
@@ -11,7 +11,7 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
 RUN cd /tmp \
       && git clone https://gitlab.cern.ch/hepmc/HepMC3.git  \
       && mkdir HepMC3/build && cd HepMC3/build \
-      && cmake ../. -DHEPMC3_ENABLE_ROOTIO=ON -DCMAKE_INSTALL_PREFIX=/usr/local -DHEPMC3_BUILD_EXAMPLES=OFF \
+      && cmake ../.  -DCMAKE_INSTALL_PREFIX=/usr/local -DHEPMC3_BUILD_EXAMPLES=OFF \ 
       && make -j20 \
       && make install  \
       && cd /tmp && rm -rf /tmp/HepMC3
