modified:   .containers/docker/Dockerfile

--- a/.containers/docker/Dockerfile
+++ b/.containers/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM  eicweb.phy.anl.gov:4567/containers/eic_container/eic:2.3.0
+FROM  eicweb.phy.anl.gov:4567/containers/eic_container/eic:2.3.1
 
 LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
       name="juggler" \
@@ -8,13 +8,13 @@ LABEL maintainer="Whitney Armstrong <warmstrong@anl.gov>" \
       base="eic_container/eic" \
       version="2.2.2"
 
-RUN cd /tmp \
-      && git clone https://gitlab.cern.ch/hepmc/HepMC3.git  \
-      && mkdir HepMC3/build && cd HepMC3/build \
-      && cmake ../.  -DCMAKE_INSTALL_PREFIX=/usr/local -DHEPMC3_BUILD_EXAMPLES=OFF \ 
-      && make -j20 \
-      && make install  \
-      && cd /tmp && rm -rf /tmp/HepMC3
+#RUN cd /tmp \
+#      && git clone https://gitlab.cern.ch/hepmc/HepMC3.git  \
+#      && mkdir HepMC3/build && cd HepMC3/build \
+#      && cmake ../.  -DCMAKE_INSTALL_PREFIX=/usr/local -DHEPMC3_BUILD_EXAMPLES=OFF \ 
+#      && make -j20 \
+#      && make install  \
+#      && cd /tmp && rm -rf /tmp/HepMC3
 
 RUN cd /tmp \
       && wget http://home.thep.lu.se/~torbjorn/pythia8/pythia8303.tgz \
